# pdfspy

./: .gitignore  README.md  README_new.md  demo_donut_extraction.py  instruct.md  interface.ts  main.py  mappers.py  parse_ts_interface.py  pyproject.toml  test_donut_extraction.py  test_report.json  test_runner.py  testing.md
app/: __init__.py  cache_manager.py  chemical_ner.py  donut_processor.py  dynamic_extractor.py  extractors.py  hazard_classifier.py  mappers.py  parse_ts_interface.py  utils.py
cache/: 32f8039ce01ecf92e1a4957d019741c0_4f3dbea85ef0fb419aaa2b037f3078df.pkl  32f8039ce01ecf92e1a4957d019741c0_5d91657a5aa5db10d10ddef8c9de8278.pkl  32f8039ce01ecf92e1a4957d019741c0_70b3c23084c9beff9c634b276fb4719a.pkl  32f8039ce01ecf92e1a4957d019741c0_a838fd8f3afc2ee58feb211806e2e93f.pkl  61d42f937bb12b4f3574a6cac427cdda_f7bfcd2d98ab2b0bf39e29ee8cf641b4.pkl  cache_metadata.json  d5abfaeeb615f709ecb70affce130d7c_f7bfcd2d98ab2b0bf39e29ee8cf641b4.pkl
interfaces/: comprehensive_interface.ts  custom_interface.ts  interface.ts  simple_interface.ts  test_interface.ts  user_example_interface.ts
tests/: confest.py  test_pdf_scrapper.py  test_performance_edge_cases.py
