[project]
name = "pdfspy"
version = "0.1.0"
description = "High-performance PDF data extraction with chemical NER and Donut integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pdfplumber>=0.11.0",
    "rapidfuzz>=3.6.0",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "pdf2image>=1.17.0",
    "joblib>=1.3.0",
    "pillow>=10.0.0",
    "datasets>=2.14.0",
    "accelerate>=0.24.0",
    "pandas>=2.1.0",
    "protobuf>=3.20.0",
    "sentencepiece>=0.1.99",
    "spacy>=3.7.0",
    "en-core-web-trf",
    "numpy>=1.21.0,<2.0",
]

[tool.pytest.ini_options]
markers = [
    "performance: marks tests as performance tests (deselect with '-m \"not performance\"')",
]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ["**/*venv/**/*"]

[tool.uv.sources]
en-core-web-trf = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.7.3/en_core_web_trf-3.7.3-py3-none-any.whl" }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
